fix: messages user style pre-wrap instead of pre to prevent overflow x

--- a/public/style.css
+++ b/public/style.css
@@ -36,7 +36,7 @@ p {
 }
 
 #messages > .user {
-    white-space: pre;
+    white-space: pre-wrap;
 }
 
 #messages > .assistant {
